# sqlfmt-ng

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dev.sh
.claude/skills/corpus-improve/: SKILL.md
crates/dialect-cockroachdb/: Cargo.toml
crates/dialect-cockroachdb/src/: lib.rs
crates/dialect-googlesql/: Cargo.toml
crates/dialect-googlesql/src/: lib.rs
crates/dialect-graphviz/: Cargo.toml
crates/dialect-graphviz/src/: convert.rs  lib.rs
crates/dialect-graphviz/testdata/manual/: attr-statements.dot  basic-digraph.dot  edge-chain.dot  empty-graph.dot  id-equals.dot  nodes-with-attrs.dot  strict-graph.dot  subgraphs.dot
crates/dialect-graphviz/testdata/success/: graphviz.sql
crates/dialect-graphviz/tests/: corpus.rs
crates/dialect-json/: Cargo.toml
crates/dialect-json/src/: lib.rs
crates/dialect-materialize/: Cargo.toml
crates/dialect-materialize/src/: convert.rs  lib.rs
crates/dialect-materialize/testdata/failing/: cockroachdb.sql  materialize.sql  postgres.sql
crates/dialect-materialize/testdata/success/: cockroachdb.sql  materialize.sql  postgres.sql
crates/dialect-materialize/tests/: corpus.rs
crates/dialect-postgres/: Cargo.toml
crates/dialect-postgres-convert/: Cargo.toml  build.rs
crates/dialect-postgres-convert/src/: convert.rs  json_convert.rs  lib.rs
crates/dialect-postgres/src/: convert.rs  lib.rs
crates/dialect-postgres/testdata/failing/: cockroachdb.sql  materialize.sql  postgres.sql
crates/dialect-postgres/testdata/success/: cockroachdb.sql  materialize.sql
crates/dialect-postgres/tests/: corpus.rs
crates/dialect-sqlparser/: Cargo.toml
crates/dialect-sqlparser/src/: convert.rs  lib.rs
crates/sqlfmt-core/: Cargo.toml
crates/sqlfmt-core/src/: lib.rs  preprocess.rs
crates/sqlfmt-corpus-tests/: Cargo.toml
crates/sqlfmt-corpus-tests/src/: corpus.rs  github.rs  graphviz.rs  lib.rs  slt.rs  sources.rs  sql.rs
crates/sqlfmt-corpus-tests/testdata/: cockroachdb-materialize.sql  cockroachdb-postgres.sql  materialize-materialize.sql  materialize-postgres.sql  postgres-materialize.sql  postgres-postgres.sql
crates/sqlfmt-corpus-tests/testdata/failing/: cockroachdb-materialize.sql  cockroachdb-postgres.sql  materialize-materialize.sql  materialize-postgres.sql  postgres-materialize.sql  postgres-postgres.sql
crates/sqlfmt-corpus-tests/testdata/success/: cockroachdb-materialize.sql  cockroachdb-postgres.sql  materialize-materialize.sql  materialize-postgres.sql  postgres-materialize.sql  postgres-postgres.sql
crates/sqlfmt-corpus-tests/tests/: corpus.rs
crates/sqlfmt-error/: Cargo.toml
crates/sqlfmt-error/src/: lib.rs
crates/sqlfmt-ir/: Cargo.toml
crates/sqlfmt-ir/src/: lib.rs
crates/sqlfmt-render/: Cargo.toml
crates/sqlfmt-render/src/: lib.rs
docs/: index.html  pg-worker.js
docs/superpowers/plans/: 2026-04-20-sqlfmtng.md  2026-04-29-json-dialect.md
docs/superpowers/specs/: 2026-04-29-json-dialect-design.md
docs/wasm/: package.json  sqlfmt_web.d.ts  sqlfmt_web.js  sqlfmt_web_bg.wasm  sqlfmt_web_bg.wasm.d.ts
src/: main.rs
web/: Cargo.toml
web/src/: lib.rs
