[workspace]
members = [
    "crates/sqlfmt-ir",
    "crates/sqlfmt-render",
    "crates/sqlfmt-core",
    "crates/dialect-materialize",
    "crates/dialect-postgres",
    "crates/dialect-postgres-convert",
    "crates/dialect-cockroachdb",
    "crates/dialect-googlesql",
    "web",
    ".",
]
resolver = "2"

[package]
name = "sqlfmt"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlfmt-core = { path = "crates/sqlfmt-core" }
sqlfmt-render = { path = "crates/sqlfmt-render" }
dialect-materialize = { path = "crates/dialect-materialize" }
dialect-postgres = { path = "crates/dialect-postgres" }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
