[workspace]
members = [
    ".",
    "crates/dialect-cockroachdb",
    "crates/dialect-googlesql",
    "crates/dialect-json",
    "crates/dialect-sqlparser",
    "crates/dialect-materialize",
    "crates/dialect-postgres-convert",
    "crates/dialect-postgres",
    "crates/sqlfmt-corpus-tests",
    "crates/sqlfmt-core",
    "crates/sqlfmt-error",
    "crates/sqlfmt-ir",
    "crates/sqlfmt-render",
    "web",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[package]
name = "sqlfmt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
dialect-json = { path = "crates/dialect-json" }
dialect-materialize = { path = "crates/dialect-materialize" }
dialect-postgres = { path = "crates/dialect-postgres" }
dialect-sqlparser = { path = "crates/dialect-sqlparser" }
sqlfmt-core = { path = "crates/sqlfmt-core" }
sqlfmt-render = { path = "crates/sqlfmt-render" }

[profile.release]
opt-level = "z"
lto = true
