[package]
name = "sqlfmt-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sqlfmt-core = { path = "../crates/sqlfmt-core" }
sqlfmt-render = { path = "../crates/sqlfmt-render" }
sqlfmt-ir = { path = "../crates/sqlfmt-ir" }
dialect-materialize = { path = "../crates/dialect-materialize" }
wasm-bindgen = "0.2"
serde_json = "1"
