[package]
name = "sqlfmt-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
sqlfmt-core = { path = "../crates/sqlfmt-core" }
sqlfmt-render = { path = "../crates/sqlfmt-render" }
sqlfmt-ir = { path = "../crates/sqlfmt-ir" }
dialect-json = { path = "../crates/dialect-json" }
dialect-materialize = { path = "../crates/dialect-materialize" }
dialect-postgres-convert = { path = "../crates/dialect-postgres-convert" }
wasm-bindgen = "0.2"
serde_json = "1"
