[package]
name = "dialect-materialize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlfmt-ir = { path = "../sqlfmt-ir" }
sqlfmt-core = { path = "../sqlfmt-core" }
mz-sql-parser = { git = "https://github.com/MaterializeInc/materialize.git", tag = "v26.20.2" }
thiserror = "1"

[dev-dependencies]
sqlfmt-render = { path = "../sqlfmt-render" }
sqlfmt-corpus-tests = { path = "../sqlfmt-corpus-tests" }
