[package]
name = "dialect-postgres-convert"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlfmt-ir = { path = "../sqlfmt-ir" }
sqlfmt-core = { path = "../sqlfmt-core" }
prost = "0.10"

[build-dependencies]
prost-build = "0.10"

[dev-dependencies]
pg_query = "5"
sqlfmt-render = { path = "../sqlfmt-render" }
