[package]
name = "dialect-postgres-convert"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlfmt-ir = { path = "../sqlfmt-ir" }
sqlfmt-core = { path = "../sqlfmt-core" }
serde_json = "1"

[dev-dependencies]
pg_query = "5"
sqlfmt-render = { path = "../sqlfmt-render" }
