[package]
name = "dialect-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlfmt-ir = { path = "../sqlfmt-ir" }
sqlfmt-core = { path = "../sqlfmt-core" }
dialect-postgres-convert = { path = "../dialect-postgres-convert" }
pg_query = "5"

[dev-dependencies]
sqlfmt-render = { path = "../sqlfmt-render" }
sqlfmt-corpus-tests = { path = "../sqlfmt-corpus-tests" }
