[package]
name = "sqlfmt-corpus-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlfmt-core = { path = "../sqlfmt-core" }
sqlfmt-render = { path = "../sqlfmt-render" }
